--- a/gtk_glade.1.glade
+++ b/gtk_glade.1.glade
@@ -88,6 +88,9 @@
                 <property name="top_attach">1</property>
               </packing>
             </child>
+            <style>
+              <class name="login"/>
+            </style>
           </object>
           <packing>
             <property name="left_attach">2</property>
@@ -102,6 +105,9 @@
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
             <signal name="draw" handler="on_draw" swapped="no"/>
+            <style>
+              <class name="draw_top"/>
+            </style>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -192,7 +198,13 @@
         <child>
           <placeholder/>
         </child>
+        <style>
+          <class name="window"/>
+        </style>
       </object>
     </child>
+    <style>
+      <class name="window"/>
+    </style>
   </object>
 </interface>
