--- a/gtk_glade.glade
+++ b/gtk_glade.glade
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Generated with glade 3.22.1 -->
 <interface>
-  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gtk+" version="3.20"/>
   <object class="GtkWindow" id="main_window">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="hexpand">True</property>
     <property name="vexpand">True</property>
     <signal name="destroy" handler="onDestroy" swapped="no"/>
     <child>
@@ -88,6 +89,9 @@
                 <property name="top_attach">1</property>
               </packing>
             </child>
+            <style>
+              <class name="login"/>
+            </style>
           </object>
           <packing>
             <property name="left_attach">2</property>
@@ -102,6 +106,9 @@
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
             <signal name="draw" handler="on_draw" swapped="no"/>
+            <style>
+              <class name="draw_top"/>
+            </style>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -192,7 +199,13 @@
         <child>
           <placeholder/>
         </child>
+        <style>
+          <class name="window"/>
+        </style>
       </object>
     </child>
+    <style>
+      <class name="window"/>
+    </style>
   </object>
 </interface>
