--- a/gtk_glade.glade
+++ b/gtk_glade.glade
@@ -11,9 +11,6 @@
     <signal name="destroy" handler="onDestroy" swapped="no"/>
     <signal name="key-press-event" handler="keypress" swapped="no"/>
     <child>
-      <placeholder/>
-    </child>
-    <child>
       <object class="GtkGrid" id="main_grid">
         <property name="name">main_grid</property>
         <property name="visible">True</property>
@@ -28,70 +25,22 @@
             <property name="no_show_all">True</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
-            <property name="margin_bottom">78</property>
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
             <child>
-              <object class="GtkLabel">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Username</property>
-                <style>
-                  <class name="uplabel"/>
-                </style>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkButton">
-                <property name="label" translatable="yes">Login</property>
+                <property name="label" translatable="yes">LOGIN</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="margin_top">6</property>
-                <signal name="activate" handler="onButtonPressed" swapped="no"/>
-                <signal name="clicked" handler="onButtonPressed" swapped="no"/>
+                <property name="hexpand">False</property>
                 <style>
                   <class name="button"/>
                 </style>
               </object>
               <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">4</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="margin_top">5</property>
-                <property name="label" translatable="yes">Password</property>
-                <style>
-                  <class name="uplabel"/>
-                </style>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">2</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkEntry">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="visibility">False</property>
-                <property name="secondary_icon_activatable">False</property>
-                <property name="secondary_icon_sensitive">False</property>
-                <property name="input_purpose">password</property>
-                <style>
-                  <class name="pass_input_box"/>
-                </style>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
+                <property name="left_attach">1</property>
                 <property name="top_attach">3</property>
               </packing>
             </child>
@@ -99,15 +48,60 @@
               <object class="GtkEntry">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="primary_icon_pixbuf">res/user.png</property>
+                <property name="placeholder_text" translatable="yes">Username</property>
                 <property name="input_purpose">name</property>
                 <style>
-                  <class name="user_input_box"/>
+                  <class name="input_box"/>
+                </style>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">0</property>
+                <property name="width">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="margin_top">13</property>
+                <property name="visibility">False</property>
+                <property name="shadow_type">none</property>
+                <property name="primary_icon_pixbuf">res/pass.png</property>
+                <property name="primary_icon_activatable">False</property>
+                <property name="secondary_icon_activatable">False</property>
+                <property name="secondary_icon_sensitive">False</property>
+                <property name="placeholder_text" translatable="yes">Password</property>
+                <property name="input_purpose">password</property>
+                <style>
+                  <class name="input_box"/>
                 </style>
               </object>
               <packing>
                 <property name="left_attach">0</property>
                 <property name="top_attach">1</property>
+                <property name="width">2</property>
               </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="margin_top">3</property>
+                <property name="xalign">0</property>
+                <style>
+                  <class name="uplabel"/>
+                </style>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">2</property>
+                <property name="width">2</property>
+              </packing>
+            </child>
+            <child>
+              <placeholder/>
             </child>
             <style>
               <class name="login"/>
@@ -116,6 +110,19 @@
           <packing>
             <property name="left_attach">2</property>
             <property name="top_attach">3</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkImage" id="logo">
+            <property name="name">logo</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="margin_top">66</property>
+          </object>
+          <packing>
+            <property name="left_attach">0</property>
+            <property name="top_attach">0</property>
+            <property name="width">5</property>
           </packing>
         </child>
         <child>
@@ -131,35 +138,8 @@
             </style>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">1</property>
-            <property name="width">5</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkImage" id="logo">
-            <property name="name">logo</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="margin_top">20</property>
-          </object>
-          <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">0</property>
-            <property name="width">5</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkDrawingArea">
-            <property name="height_request">11</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="vexpand">True</property>
-          </object>
-          <packing>
-            <property name="left_attach">5</property>
-            <property name="top_attach">0</property>
-            <property name="height">4</property>
+            <property name="left_attach">2</property>
+            <property name="top_attach">2</property>
           </packing>
         </child>
         <child>
@@ -167,15 +147,42 @@
             <property name="name">info_label</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="margin_top">38</property>
             <property name="margin_bottom">15</property>
             <property name="label" translatable="yes">Authenticating...</property>
             <property name="use_markup">True</property>
+            <style>
+              <class name="info_label"/>
+            </style>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">4</property>
-            <property name="width">6</property>
+            <property name="left_attach">2</property>
+            <property name="top_attach">1</property>
           </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
         </child>
         <child>
           <placeholder/>
